<resources>
    <string name="app_name">MonPotager</string>
    <string name="button">Button</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action">Action</string>
    <string name="parcelle">Parcelle</string>
    <string name="date">Date</string>
    <string name="historique_global">Historique Global</string>
    <string name="ajout_activite">Ajouter une Activité</string>
    <string name="valider">Valider</string>
    <string name="toast_message">Fonctionne !</string>
    <string name="datetext">Date :</string>
    <string name="planter">Planter</string>
    <string name="arroser">Arroser</string>
    <string name="d_sherber">Désherber</string>
    <string name="remise_0">Remise à 0</string>
    <string name="recolter">Récolter</string>
    <string name="date_format">DD/MM/YYYY</string>
</resources>