<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_news_rootview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".HomeFragment">

    <Spinner
        android:id="@+id/spinner"
        style="@style/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarSize="100dp"
        android:layout_marginTop="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/table_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >

    <Button
        android:id="@+id/button_arrosage"
        style="@style/action_button"
        android:text="@string/arroser" />

    <Button
        android:id="@+id/button_recolte"
        style="@style/action_button"
        android:text="@string/recolter" />

    <Button
        android:id="@+id/button_plantation"
        style="@style/action_button"
        android:text="@string/planter" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/button_remise0"
            style="@style/action_button"
            android:text="@string/remise_0"
            />


        <Button
            android:id="@+id/button_désherbage"
            style="@style/action_button"
            android:text="@string/d_sherber" />

    </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/show_selected_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="73dp"
        android:text="@string/datetext"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_button" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/date_format"
        android:inputType="date"
        android:maxLength="10"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/show_selected_date"
        app:layout_constraintTop_toBottomOf="@+id/table_button" />

    <Button
        android:id="@+id/button_validate"
        android:layout_width="match_parent"
        android:layout_margin="2dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/valider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

</androidx.constraintlayout.widget.ConstraintLayout>