<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/historique_global"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/table_heading_layout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:paddingLeft="@dimen/big_padding"
        android:paddingTop="@dimen/big_padding"
        android:paddingRight="@dimen/big_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTitle">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@color/colorPrimary">

            <TextView
                style="@style/table_header"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/action" />

            <TextView
                style="@style/table_header"
                android:layout_column="1"
                android:layout_weight="1"
                android:text="@string/parcelle" />

            <TextView
                style="@style/table_header"
                android:layout_column="2"
                android:layout_weight="1"
                android:text="@string/date" />
        </TableRow>
    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="409dp"
        android:layout_height="500dp"
        android:paddingLeft="@dimen/big_padding"
        android:paddingRight="@dimen/big_padding"
        android:paddingBottom="@dimen/big_padding"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_heading_layout"
        tools:listitem="@layout/recyclerview_item" />


</androidx.constraintlayout.widget.ConstraintLayout>